
 * Added support for format attribute negotiation.  See the Codecs changes for
   more information.

 * Extra headers specified with SIPAddHeader are sent with the REFER message
   when using Transfer application. See refer_addheaders in sip.conf.sample.

 * Added support to use private party ID information with calls.


chan_skinny
------------------
 * Added skinny version 17 protocol support.


chan_unistim
--------------------
 * Added ability to use multiple lines for a single phone.  This allows multiple
   calls to occur on a single phone, using callwaiting and switching between calls.

 * Added option 'sharpdial' allowing end dialing by pressing # key

 * Added option 'interdigit_timer' to control phone dial timeout

 * Added options 'cwstyle', 'cwvolume' controlling callwaiting appearance

 * Added global 'debug' option, that enables debug in channel driver

 * Added ability to translate on-screen menu in multiple languages. Tested on
   Russian languages.  Supported encodings: ISO 8859-1, ISO 8859-2, ISO 8859-4,
   ISO 8859-5, ISO 2022-JP. Language controlled by 'language' and on-screen
   menu of phone

 * In addition to English added French and Russian languages for on-screen menus

 * Reworked dialing number input: added dialing by timeout, immediate dial on
   on dialplan compare, phone number length now not limited by screen size

 * Added ability to pickup a call using features.conf defined value and
   on-screen key


chan_mISDN:
------------------
 * Add options namedcallgroup and namedpickupgroup to support installations
   where a higher number of groups (>64) is required.

 * Added support to use private party ID information with calls.


Core
------------------
 * The minimum DTMF duration can now be configured in asterisk.conf
   as "mindtmfduration". The default value is (as before) set to 80 ms.
   (previously it was only available in source code)

 * Named ACLs can now be specified in acl.conf and used in configurations that